<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FF000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Creates a container for the gallows and body parts -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:paddingTop="15dp">

        <!-- Displays the gallows -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/android_hangman_gallows"
            android:id="@+id/imageView" />

        <!-- Creates the head image -->

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingLeft="108dp"
            android:paddingTop="23dp"
            android:src="@drawable/android_hangman_head" />


        <!--Creates the body image-->
        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingLeft="120dp"
            android:paddingTop="53dp"
            android:src="@drawable/android_hangman_body" />

        <!-- Creates an arm image -->

        <ImageView
            android:id="@+id/arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="100dp"
            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_arm1" />

        <!--Creates a second arm image-->
        <ImageView
            android:id="@+id/arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="120dp"
            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_arm2" />

        <!-- Creates a leg image -->
        <ImageView
            android:id="@+id/leg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="101dp"
            android:paddingTop="90dp"
            android:src="@drawable/android_hangman_leg1" />

        <!-- Creates a second leg image -->
        <ImageView
            android:id="@+id/leg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="121dp"
            android:paddingTop="90dp"
            android:src="@drawable/android_hangman_leg2" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skip"
            android:id="@+id/skipbutton"
            android:layout_gravity="center_horizontal"
            android:layout_alignTop="@+id/arm2"
            android:layout_toRightOf="@+id/arm2" />

    </RelativeLayout>

    <!-- Displays the answer word -->
    <LinearLayout
            android:id="@+id/word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
        android:layout_weight="0.45">

        </LinearLayout>

    <!-- Displays the answer hint -->

    <LinearLayout
        android:id="@+id/hintlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_below="@+id/seperator"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:fadeScrollbars="false">
        <TextView
            android:id="@+id/hinttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hint will appear here if available and if its long, it will be wrapped."
            android:gravity="center"
            android:textSize="20sp"/>
        </ScrollView>
    </LinearLayout>
    <!-- Creates a letter grid for guess letters -->

    <GridView
        android:id="@+id/letters"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="#FF000000"
        android:horizontalSpacing="5dp"
        android:numColumns="7"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />

</LinearLayout>